5_k8s/11_qemu/2_proxy2/qemu1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qemu1
  labels:
    app: qemu1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qemu1
  template:
    metadata:
      labels:
        app: qemu1
    spec:
      containers:
        - name: qemu1
          image: qemux/qemu
          ports:
            - containerPort: 5900
              name: vnc
              protocol: TCP
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
            privileged: true
          volumeMounts:
            - mountPath: /storage
              name: storage
            - mountPath: /dev/kvm
              name: dev-kvm
            - mountPath: /dev/net/tun
              name: dev-tun
      terminationGracePeriodSeconds: 120
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: qemu1-pvc
        - hostPath:
            path: /dev/kvm
          name: dev-kvm
        - hostPath:
            path: /dev/net/tun
            type: CharDevice
          name: dev-tun
---
apiVersion: v1
kind: Service
metadata:
  name: qemu1
spec:
  selector:
    app: qemu1
  ports:
    - name: vnc
      port: 5900
      protocol: TCP
      targetPort: 5900
