5_k8s/11_qemu/2_proxy2/guacamole.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacd
spec:
  selector:
    app: guacd
  ports:
    - protocol: TCP
      port: 4822
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacd
spec:
  selector:
    matchLabels:
      app: guacd
  template:
    metadata:
      labels:
        app: guacd
    spec:
      containers:
        - name: guacd
          image: guacamole/guacd
          ports:
            - containerPort: 4822
---
apiVersion: v1
kind: Service
metadata:
  name: guacamole
spec:
  selector:
    app: guacamole
  ports:
    - protocol: TCP
      port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole
spec:
  selector:
    matchLabels:
      app: guacamole
  template:
    metadata:
      labels:
        app: guacamole
    spec:
      containers:
        - name: guacamole
          image: guacamole/guacamole
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: guac-etc
              mountPath: /etc/guacamole
      volumes:
        - name: config
          configMap:
            name: guac-config
        - name: guac-etc
          emptyDir: {}
# ------------------------------
# Traefik configuration
# ------------------------------
# ---
# apiVersion: traefik.io/v1alpha1
# kind: Middleware
# metadata:
#   name: strip-vm
# spec:
#   stripPrefix:
#     prefixes:
#       - /vm
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: guacamole-ingressroute
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      # middlewares:
      #   - name: strip-vm
      services:
        - name: guacamole
          port: 8080
